# WXAOS

./: README.md
src/arch/arm32/boot/: start.S
src/arch/arm64/boot/: start.S
src/arch/mips32/boot/: start.S
src/arch/ppc32/boot/: start.S
src/arch/ppc64/: CMakeLists.txt  link.ld
src/arch/ppc64/boot/: crt0.S  early_uart.S  exception_vectors.S  start.S
src/arch/ppc64/cpu/: context_switch.S  cpu.c
src/arch/ppc64/irq/: interrupt_dispatch.c  interrupts.c
src/arch/ppc64/mm/: mmu.c  pagetable.c  tlb.c
src/arch/ppc64/platform/: qemu_powernv.c  talos2.c
src/arch/ppc64/timer/: decrementer.c
src/arch/ppc64/uart/: uart_ppc64.c
src/arch/x86/boot/: start.S
src/arch/x86_x64/boot/: start.S
src/kernel/: main.c  panic.c
src/kernel/drivers/fb/: fb_generic.c
src/kernel/drivers/timer/: timer_generic.c
src/kernel/drivers/uart/: uart_generic.c
src/kernel/lib/: printf.c  string.c
src/kernel/mm/: heap.c  paging.c  physmem.c
src/kernel/sheduler/: context_switch.c  sheduler.c
src/kernel/sys/: syscall.c
